# Cursive

./: .gitignore  AGENTS.md  C0updated.md  CLAUDE.md  Cursive0.updated.md  RefactorPlan.md  build_tmp.bat  test_tmp.bat  traceability_section0-1_appendixA.md
cursive/: CMakeLists.txt
cursive-bootstrap/: CMakeLists.txt  build_error.txt  build_msvc.bat  build_output.txt
cursive-bootstrap/_test_explicit_return/: Cursive.toml
cursive-bootstrap/_test_explicit_return/src/: main.cursive
cursive-bootstrap/_tmp_e2e/dyn_dispatch/: ir.txt
cursive-bootstrap/_tmp_e2e/modal_match/: ir.txt
cursive-bootstrap/_tmp_e2e_work/drop_order_ok/: Cursive.toml  expect.json
cursive-bootstrap/_tmp_e2e_work/drop_unwind_panic/: Cursive.toml  expect.json
cursive-bootstrap/bootstrap/: README.md  SHA256SUMS  cursive0_rt.lib
cursive-bootstrap/cmake/: Fuzzing.cmake  LLVM21.cmake
cursive-bootstrap/docs/: C0X_Extension.md  C0_Plan.md  Cursive-LLM-Guide.md  Cursive0.md  SPEC_COMPLIANCE_AUDIT_REPORT.md  SPEC_COMPLIANCE_REPORT.md  bootstrap_remediation_plan.md  spec-test-suite-command.md
cursive-bootstrap/docs/_review/: impl_rules_not_in_phase1_3.txt
cursive-bootstrap/runtime/: CMakeLists.txt  cursive0_rt.lib
cursive-bootstrap/runtime/include/: cursive0_rt.h
cursive-bootstrap/runtime/src/: async.c  context.c  filesystem.c  heap.c  mem.c  panic.c  parallel.c  region.c  rt_internal.h  spec_trace.c  string_bytes.c
cursive-bootstrap/sandbox/: debug_fork_join.cursive  temp_parallel_fork_join.cursive  test_class.cursive
cursive-bootstrap/sandbox/init_order_ok_ir/: Cursive.toml
cursive-bootstrap/sandbox/minimal_spawn/: Cursive.toml
cursive-bootstrap/sandbox/simple_spawn_test/: Cursive.toml
cursive-bootstrap/spec/: diag_index.json  rules_index.json  spec_trace_v1.md  trace_current.tsv  verifier_diag.tsv  verifier_edges.tsv  verifier_edges_current.tsv  verifier_rules.tsv  verifier_rules_current.tsv
cursive-bootstrap/spec-tests/: spec-rules.json  test-index.json
cursive-bootstrap/spec-tests/run-fail/: cleanup-defer-panic.cursive  cleanup-drop-panic.cursive  double-panic-defer.cursive  panic-divzero.cursive  panic-unreachable.cursive
cursive-bootstrap/spec-tests/runner/: README.md  config.toml  filecheck.py  run_tests.py
cursive-bootstrap/spec_verifier/: Cursive.toml
cursive-bootstrap/spec_verifier/runtime/: cursive0_rt.lib
cursive-bootstrap/spec_verifier/src/: main.cursive
cursive-bootstrap/src/: CMakeLists.txt
cursive-bootstrap/src/00_core/: diagnostic_codes.cpp  diagnostic_messages.cpp  diagnostic_render.cpp  diagnostics.cpp  hash.cpp  host_primitives.cpp  path.cpp  source_load.cpp  span.cpp  spec_trace.cpp  symbols.cpp  ub_model.cpp  unicode.cpp
cursive-bootstrap/src/01_project/: deterministic_order.cpp  ident.cpp  ir_assembly.cpp  link.cpp  load_project.cpp  manifest.cpp  module_discovery.cpp  outputs.cpp  project_validate.cpp  tool_resolution.cpp
cursive-bootstrap/src/02_syntax/: keyword_policy.cpp  lexer.cpp  lexer_ident.cpp  lexer_literals.cpp  lexer_security.cpp  lexer_ws.cpp  parse_modules.cpp  parser.cpp  parser_angle.cpp  parser_consume.cpp  parser_docs.cpp  parser_expr.cpp  parser_items.cpp  parser_paths.cpp  parser_patterns.cpp  parser_placeholders.cpp  parser_recovery.cpp  parser_stmt.cpp  parser_types.cpp  precedence_table.inc  token.cpp  tokenize.cpp
cursive-bootstrap/src/04_codegen/: binding_storage.cpp  checks.cpp  cleanup.cpp  dyn_dispatch.cpp  entrypoint.cpp  globals.cpp  init.cpp  ir_dump.cpp  ir_lowering.cpp  ir_model.cpp  linkage.cpp  literal_emit.cpp  mangle.cpp  poison_instrument.cpp  vtable_emit.cpp
cursive-bootstrap/src/06_driver/: main.cpp
cursive-bootstrap/src/analysis/: arrays_slices.cpp  cap_heap.cpp  cap_system.cpp  classes.cpp  conformance.cpp  function_types.cpp  init_planner.cpp  modal.cpp  modal_fields.cpp  modal_transitions.cpp  modal_widen.cpp  record_methods.cpp  regions.cpp  resolve_qual.cpp  resolver_expr.cpp  resolver_items.cpp  resolver_modules.cpp  resolver_pat.cpp  resolver_types.cpp  scopes.cpp  subtyping.cpp  tuples.cpp  type_infer.cpp  type_match.cpp  types.cpp  unions.cpp
cursive-bootstrap/src/codegen/: abi_calls.cpp  abi_params.cpp  abi_types.cpp  binding_storage.cpp  checks.cpp  cleanup.cpp  dyn_dispatch.cpp  entrypoint.cpp  globals.cpp  init.cpp  ir_dump.cpp  ir_lowering.cpp  ir_model.cpp  layout_aggregates.cpp  layout_dispatch.cpp  layout_dynobj.cpp  layout_modal.cpp  layout_primitives.cpp  layout_records.cpp  layout_unions.cpp  layout_value_bits.cpp  linkage.cpp  literal_emit.cpp  llvm_attrs.cpp  llvm_call_abi.cpp  llvm_mem.cpp  llvm_module.cpp  llvm_types.cpp  llvm_ub_safe.cpp  lower_expr_calls.cpp  lower_expr_core.cpp  lower_expr_places.cpp  lower_module.cpp  lower_pat.cpp  lower_proc.cpp  lower_stmt.cpp  mangle.cpp  poison_instrument.cpp  runtime_calls.cpp  runtime_decls.cpp  (+1 more)
cursive-bootstrap/src/core/: diagnostic_codes.cpp  diagnostic_messages.cpp  diagnostic_messages_table.inc  diagnostic_render.cpp  diagnostics.cpp  hash.cpp  host_primitives.cpp  path.cpp  source_load.cpp  span.cpp  spec_trace.cpp  symbols.cpp  ub_model.cpp  unicode.cpp
cursive-bootstrap/src/driver/: main.cpp
cursive-bootstrap/src/eval/: address.cpp  apply.cpp  builtins.cpp  cleanup.cpp  control.cpp  eval.cpp  exec.cpp  init.cpp  interpreter.cpp  match.cpp  state.cpp  value.cpp
cursive-bootstrap/src/frontend/: parse_modules.cpp
cursive-bootstrap/src/interpreter/: interpreter.cpp
cursive-bootstrap/src/project/: deterministic_order.cpp  ident.cpp  (+8 more)
cursive-bootstrap/test_proj/: Cursive.toml
cursive-bootstrap/tests/: CMakeLists.txt  COVERAGE.md  README.md  coverage-gaps.md  coverage-matrix.md  junit-results.xml  spec-rules.json  test-index.json  test-recommendations.md
cursive-bootstrap/tools/: coverage_check.py  coverage_report.py  cursive0_interpreter_main.cpp  diag_check_report.py  diag_coverage_report.py  diag_extractor.py  diag_message_gen.py  gen_diag_test.py  run_fuzz.py  setup_third_party.ps1  spec_indexer.py  verifier_coverage_report.py  verifier_indexer.py  verify_bootstrap_hashes.py
cursive/src/: CMakeLists.txt
(+4065 files in other folders)
